--- a/style.css
+++ b/style.css
@@ -1,12 +1,70 @@
+html {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 body {
     display: flex;
     flex-flow: column;
     align-items: center;
-    height: 100vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    box-sizing: border-box;
+    background-color: #15233b;
+    height: 100%;
+}
+
+
+.header {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    flex: 0 0 10%;
+}
+
+.footer {
+    flex-grow: 1 ;
+}
+
+.section-1 {
+    display: flex;
+}
+
+.section-2-container {
+    display: flex;
+}
+
+.section-2 .img-container {
+    display:flex;
+    flex-flow: column wrap;
+}
+
+.logo-links {
+    flex: 1;
+}
+
+.logo-links {
+    display: flex;
+    justify-content: flex-end;
+    height: auto;
+    flex: 1 1 auto;
+    gap: 30px;
+}
+
+li {
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: white;
 }
 
 img{
     background-color: black;
-    height: 200px;
-    width: 200px
+    height: 100px;
+    width: 100px
 }
