--- a/style.css
+++ b/style.css
@@ -1,57 +1,34 @@
-html {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-
-body {
+body, html{
     display: flex;
     flex-flow: column;
     align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
     box-sizing: border-box;
-    background-color: #15233b;
+    background-color: #1f2937;
     height: 100%;
+    width: 100%;
+    margin: 0;
 }
-
 
 .header {
     display: flex;
-    width: 100%;
+    width: 70%;
     align-items: center;
-    flex: 0 0 10%;
+    flex:  0 50px;  
+    justify-content: space-between;
 }
 
-.footer {
-    flex-grow: 1 ;
-}
-
-.section-1 {
-    display: flex;
-}
-
-.section-2-container {
-    display: flex;
-}
-
-.section-2 .img-container {
-    display:flex;
-    flex-flow: column wrap;
-}
-
-.logo-links {
-    flex: 1;
+.logo {
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .logo-links {
     display: flex;
-    justify-content: flex-end;
-    height: auto;
-    flex: 1 1 auto;
-    gap: 30px;
+    gap: 20px;
+    font-size: 18px;
 }
 
 li {
@@ -68,3 +45,4 @@ img{
     height: 100px;
     width: 100px
 }
+
