--- a/style.css
+++ b/style.css
@@ -43,9 +43,10 @@ a,
 }
 
 img{
-    background-color: grey;
-    height: 100px;
-    width: 100px
+    height: 150px;
+    width: 150px;
+    border: 2px solid #3882F6;
+    border-radius: 20px;
 }
 
 .section-1 {
@@ -81,4 +82,29 @@ img{
     padding-inline: 2em;
     border: 0px solid #3882F6;
     border-radius: 5px;
+}
+
+.section-2 {
+    background-color: white;
+    color: black;
+    align-self: stretch;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    flex: 1 0 auto;
+    gap: 30px;
+}
+
+.section-2-container {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.img-container,
+.img-container text {
+    flex: 0 1 150px;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
 }
