--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 
-body, html{
+body {
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -12,12 +16,22 @@ body, html{
     margin: 0;
 }
 
+body {
+    overflow: scroll;
+}
+
+body /* {
+    border: 1px solid blue;
+    padding: 2px;
+} */
+
 .header {
     display: flex;
     width: 70%;
     align-items: center;
-    flex: 0 1 50px;  
+    flex: 1 1 auto;  
     justify-content: space-between;
+    padding: 1.5em;
 }
 
 .logo {
@@ -43,45 +57,62 @@ a,
 }
 
 img{
-    height: 150px;
-    width: 150px;
+    height: 200px;
+    width: 200px;
     border: 2px solid #3882F6;
     border-radius: 20px;
 }
 
+
+
 .section-1 {
     display: flex;
     align-items: center;
-    flex: 1 1 auto;
+    flex: 0 0 50vh;
     width: 70%;
-    gap: 10px;
 }
 
+
 .section-1 img {
-    flex: 1 1 0;
-    height: 200px;
+    flex: 0 0 500px;
+    height: 250px;
 }
 
 .section-1-container {
     display: flex;
+    flex-flow: row wrap;
+    align-items: ;
+    flex: 1 1 0;
+    gap: 20px;
+}
+
+.box {
+    display: flex;
     flex-flow: column;
     align-items: flex-start;
-    flex: 1 1 0;
+    flex: 1 1 400px;
+    min-width: 400px;
     gap: 10px;
 }
 
+.box .text {
+    font-size: 30px;
+}
+
 .main-text {
-    font-size: 48px;
+    font-size: 60px;
     font-weight: 900;
 }
 
 .sign-up {
     background-color: #3882F6;
     color: white;
-    padding: 0.5em;
+    padding: 0.7em;
     padding-inline: 2em;
     border: 0px solid #3882F6;
     border-radius: 5px;
+    font-weight: 900;
+    font-size: 1.5em;
 }
 
 .section-2 {
@@ -91,22 +122,28 @@ img{
     display: flex;
     flex-flow: column;
     align-items: center;
-    flex: 1 0 auto;
-    gap: 30px;
+    flex: 1 0 60vh;
+    gap: 5em;
+}
+
+.section-2 h1 {
+    margin-top: 1em;
+    font-size: 40px;
 }
 
 .section-2-container {
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 10em;
 }
 
 .img-container,
 .img-container text {
-    flex: 0 1 150px;
+    flex: 0 1 200px;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
+    font-size: 25px;
 }
 
 .section-3{
@@ -117,25 +154,60 @@ img{
     flex-flow: column;
     align-items: center;
     justify-content: center;
-    flex: 1 1 auto;
+    flex: 1 1 50vh;
 }
 
 .section-3-container{
-    width: 70%;
+    width: 50%;
     align-self: center;
     display: flex;
     flex-flow: column;
+    gap: 4em;
 }
 
 .quote {
     font-size: 36px;
     font-weight: lighter;
     color: black;
+    line-height: 1.2;
+    font-size: 48px;
 }
 
 .thor{
     align-self: flex-end;
     color: black;
-    font-size: 28px;
+    font-size: 34px;
 }
 
+.section-4 {
+    display: flex;
+    flex: 1 1 50vh;
+    background-color: white;
+    color: white;
+    align-self: stretch;
+    align-items: center;
+    justify-content: center;
+}
+
+.section-4-container {
+    background-color: #3882F6;
+    padding: 4em;
+    display: flex;
+    flex-flow: wrap;
+    font
+
+}
+
+.button {
+    padding: 0.5em;
+    padding-inline: 1.5em;
+    background-color: #3882F6;
+    border: 2px solid white;
+    color: white;
+    font-weight: 900;
+    border-radius: 5px;
+}
+
+.footer {
+    padding: 2em;
+}
