--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     display: flex;
-    flex-flow: column;
+    flex-flow: column wrap;
     align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
@@ -120,7 +120,7 @@ img{
     color: black;
     align-self: stretch;
     display: flex;
-    flex-flow: column;
+    flex-flow: column wrap;
     align-items: center;
     flex: 1 0 60vh;
     gap: 5em;
@@ -133,6 +133,7 @@ img{
 
 .section-2-container {
     display: flex;
+    flex-flow: row wrap;
     justify-content: center;
     gap: 10em;
 }
